# CodexLotus

./: .gitignore  CodexLotus_DevGuide.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/ai/: context_builder.rs  gemini_client.rs  llm_client.rs  mod.rs  openai_client.rs
src-tauri/src/commands/: ai.rs  files.rs  mod.rs  rag.rs  settings.rs
src-tauri/src/db/: embeddings.rs  migrations.rs  mod.rs
src-tauri/src/project/: indexer.rs
src-tauri/src/util/: config.rs  error.rs
src/app/: AppShell.tsx
src/app/components/forms/: DynamicForm.tsx
src/app/components/layout/: Sidebar.tsx  StatusBar.tsx  TabBar.tsx  (+1 more)
src/app/hooks/: useAutoIndex.ts  useProjectActions.ts
src/app/providers/: JotaiProvider.tsx  QueryClientProvider.tsx  SignalsProvider.tsx  ThemeProvider.tsx
src/app/theme/: appShell.css.ts  global.css.ts  sidebar.css.ts  statusBar.css.ts  tabs.css.ts  themeUtils.ts  titleBar.css.ts  tokens.css.ts
src/docs/: 01-Introduction.md  02-ProjectManagement.md  03-Editor.md  04-StatBlocks.md  05-DiceTools.md  06-LoreMap.md  07-RuleCalculators.md  08-ProceduralGeneration.md  09-AutoTagger.md  10-PlaytestSimulator.md  11-Export.md  12-Settings.md  index.ts
src/lib/: markdownUtils.ts
src/lib/api/: ai.ts  client.ts  files.ts  rag.ts
src/lib/export/: exportUtils.ts
src/lib/markdown/: layoutExtensions.ts  pipeline.ts  ttrpgExtensions.ts
src/lib/templates/: types.ts
src/types/: dice-roller.d.ts
(+34 files in other folders)
