[package]
name = "codexlotus"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tauri = { version = "1", features = [ "window-all", "path-all", "dialog-all", "fs-all"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "stream"] }
rusqlite = { version = "0.31", features = ["bundled", "blob"] }
walkdir = "2.5"
async-trait = "0.1"
keyring = "2.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
